// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets time options returns an array of options every 15 min 1`] = `
[
  {
    "label": "12:00 AM",
    "value": "00:00",
  },
  {
    "label": "12:15 AM",
    "value": "00:15",
  },
  {
    "label": "12:30 AM",
    "value": "00:30",
  },
  {
    "label": "12:45 AM",
    "value": "00:45",
  },
  {
    "label": "1:00 AM",
    "value": "01:00",
  },
  {
    "label": "1:15 AM",
    "value": "01:15",
  },
  {
    "label": "1:30 AM",
    "value": "01:30",
  },
  {
    "label": "1:45 AM",
    "value": "01:45",
  },
  {
    "label": "2:00 AM",
    "value": "02:00",
  },
  {
    "label": "2:15 AM",
    "value": "02:15",
  },
  {
    "label": "2:30 AM",
    "value": "02:30",
  },
  {
    "label": "2:45 AM",
    "value": "02:45",
  },
  {
    "label": "3:00 AM",
    "value": "03:00",
  },
  {
    "label": "3:15 AM",
    "value": "03:15",
  },
  {
    "label": "3:30 AM",
    "value": "03:30",
  },
  {
    "label": "3:45 AM",
    "value": "03:45",
  },
  {
    "label": "4:00 AM",
    "value": "04:00",
  },
  {
    "label": "4:15 AM",
    "value": "04:15",
  },
  {
    "label": "4:30 AM",
    "value": "04:30",
  },
  {
    "label": "4:45 AM",
    "value": "04:45",
  },
  {
    "label": "5:00 AM",
    "value": "05:00",
  },
  {
    "label": "5:15 AM",
    "value": "05:15",
  },
  {
    "label": "5:30 AM",
    "value": "05:30",
  },
  {
    "label": "5:45 AM",
    "value": "05:45",
  },
  {
    "label": "6:00 AM",
    "value": "06:00",
  },
  {
    "label": "6:15 AM",
    "value": "06:15",
  },
  {
    "label": "6:30 AM",
    "value": "06:30",
  },
  {
    "label": "6:45 AM",
    "value": "06:45",
  },
  {
    "label": "7:00 AM",
    "value": "07:00",
  },
  {
    "label": "7:15 AM",
    "value": "07:15",
  },
  {
    "label": "7:30 AM",
    "value": "07:30",
  },
  {
    "label": "7:45 AM",
    "value": "07:45",
  },
  {
    "label": "8:00 AM",
    "value": "08:00",
  },
  {
    "label": "8:15 AM",
    "value": "08:15",
  },
  {
    "label": "8:30 AM",
    "value": "08:30",
  },
  {
    "label": "8:45 AM",
    "value": "08:45",
  },
  {
    "label": "9:00 AM",
    "value": "09:00",
  },
  {
    "label": "9:15 AM",
    "value": "09:15",
  },
  {
    "label": "9:30 AM",
    "value": "09:30",
  },
  {
    "label": "9:45 AM",
    "value": "09:45",
  },
  {
    "label": "10:00 AM",
    "value": "10:00",
  },
  {
    "label": "10:15 AM",
    "value": "10:15",
  },
  {
    "label": "10:30 AM",
    "value": "10:30",
  },
  {
    "label": "10:45 AM",
    "value": "10:45",
  },
  {
    "label": "11:00 AM",
    "value": "11:00",
  },
  {
    "label": "11:15 AM",
    "value": "11:15",
  },
  {
    "label": "11:30 AM",
    "value": "11:30",
  },
  {
    "label": "11:45 AM",
    "value": "11:45",
  },
  {
    "label": "12:00 PM",
    "value": "12:00",
  },
  {
    "label": "12:15 PM",
    "value": "12:15",
  },
  {
    "label": "12:30 PM",
    "value": "12:30",
  },
  {
    "label": "12:45 PM",
    "value": "12:45",
  },
  {
    "label": "1:00 PM",
    "value": "13:00",
  },
  {
    "label": "1:15 PM",
    "value": "13:15",
  },
  {
    "label": "1:30 PM",
    "value": "13:30",
  },
  {
    "label": "1:45 PM",
    "value": "13:45",
  },
  {
    "label": "2:00 PM",
    "value": "14:00",
  },
  {
    "label": "2:15 PM",
    "value": "14:15",
  },
  {
    "label": "2:30 PM",
    "value": "14:30",
  },
  {
    "label": "2:45 PM",
    "value": "14:45",
  },
  {
    "label": "3:00 PM",
    "value": "15:00",
  },
  {
    "label": "3:15 PM",
    "value": "15:15",
  },
  {
    "label": "3:30 PM",
    "value": "15:30",
  },
  {
    "label": "3:45 PM",
    "value": "15:45",
  },
  {
    "label": "4:00 PM",
    "value": "16:00",
  },
  {
    "label": "4:15 PM",
    "value": "16:15",
  },
  {
    "label": "4:30 PM",
    "value": "16:30",
  },
  {
    "label": "4:45 PM",
    "value": "16:45",
  },
  {
    "label": "5:00 PM",
    "value": "17:00",
  },
  {
    "label": "5:15 PM",
    "value": "17:15",
  },
  {
    "label": "5:30 PM",
    "value": "17:30",
  },
  {
    "label": "5:45 PM",
    "value": "17:45",
  },
  {
    "label": "6:00 PM",
    "value": "18:00",
  },
  {
    "label": "6:15 PM",
    "value": "18:15",
  },
  {
    "label": "6:30 PM",
    "value": "18:30",
  },
  {
    "label": "6:45 PM",
    "value": "18:45",
  },
  {
    "label": "7:00 PM",
    "value": "19:00",
  },
  {
    "label": "7:15 PM",
    "value": "19:15",
  },
  {
    "label": "7:30 PM",
    "value": "19:30",
  },
  {
    "label": "7:45 PM",
    "value": "19:45",
  },
  {
    "label": "8:00 PM",
    "value": "20:00",
  },
  {
    "label": "8:15 PM",
    "value": "20:15",
  },
  {
    "label": "8:30 PM",
    "value": "20:30",
  },
  {
    "label": "8:45 PM",
    "value": "20:45",
  },
  {
    "label": "9:00 PM",
    "value": "21:00",
  },
  {
    "label": "9:15 PM",
    "value": "21:15",
  },
  {
    "label": "9:30 PM",
    "value": "21:30",
  },
  {
    "label": "9:45 PM",
    "value": "21:45",
  },
  {
    "label": "10:00 PM",
    "value": "22:00",
  },
  {
    "label": "10:15 PM",
    "value": "22:15",
  },
  {
    "label": "10:30 PM",
    "value": "22:30",
  },
  {
    "label": "10:45 PM",
    "value": "22:45",
  },
  {
    "label": "11:00 PM",
    "value": "23:00",
  },
  {
    "label": "11:15 PM",
    "value": "23:15",
  },
  {
    "label": "11:30 PM",
    "value": "23:30",
  },
  {
    "label": "11:45 PM",
    "value": "23:45",
  },
]
`;

exports[`gets time options returns an array of options within max 1`] = `
[
  {
    "label": "12:00 AM",
    "value": "00:00",
  },
  {
    "label": "12:10 AM",
    "value": "00:10",
  },
  {
    "label": "12:20 AM",
    "value": "00:20",
  },
  {
    "label": "12:30 AM",
    "value": "00:30",
  },
  {
    "label": "12:40 AM",
    "value": "00:40",
  },
  {
    "label": "12:50 AM",
    "value": "00:50",
  },
  {
    "label": "1:00 AM",
    "value": "01:00",
  },
  {
    "label": "1:10 AM",
    "value": "01:10",
  },
  {
    "label": "1:20 AM",
    "value": "01:20",
  },
  {
    "label": "1:30 AM",
    "value": "01:30",
  },
  {
    "label": "1:40 AM",
    "value": "01:40",
  },
  {
    "label": "1:50 AM",
    "value": "01:50",
  },
  {
    "label": "2:00 AM",
    "value": "02:00",
  },
  {
    "label": "2:10 AM",
    "value": "02:10",
  },
  {
    "label": "2:20 AM",
    "value": "02:20",
  },
  {
    "label": "2:30 AM",
    "value": "02:30",
  },
  {
    "label": "2:40 AM",
    "value": "02:40",
  },
  {
    "label": "2:50 AM",
    "value": "02:50",
  },
  {
    "label": "3:00 AM",
    "value": "03:00",
  },
  {
    "label": "3:10 AM",
    "value": "03:10",
  },
  {
    "label": "3:20 AM",
    "value": "03:20",
  },
  {
    "label": "3:30 AM",
    "value": "03:30",
  },
  {
    "label": "3:40 AM",
    "value": "03:40",
  },
  {
    "label": "3:50 AM",
    "value": "03:50",
  },
  {
    "label": "4:00 AM",
    "value": "04:00",
  },
  {
    "label": "4:10 AM",
    "value": "04:10",
  },
  {
    "label": "4:20 AM",
    "value": "04:20",
  },
  {
    "label": "4:30 AM",
    "value": "04:30",
  },
  {
    "label": "4:40 AM",
    "value": "04:40",
  },
  {
    "label": "4:50 AM",
    "value": "04:50",
  },
  {
    "label": "5:00 AM",
    "value": "05:00",
  },
  {
    "label": "5:10 AM",
    "value": "05:10",
  },
  {
    "label": "5:20 AM",
    "value": "05:20",
  },
  {
    "label": "5:30 AM",
    "value": "05:30",
  },
  {
    "label": "5:40 AM",
    "value": "05:40",
  },
  {
    "label": "5:50 AM",
    "value": "05:50",
  },
  {
    "label": "6:00 AM",
    "value": "06:00",
  },
  {
    "label": "6:10 AM",
    "value": "06:10",
  },
  {
    "label": "6:20 AM",
    "value": "06:20",
  },
  {
    "label": "6:30 AM",
    "value": "06:30",
  },
  {
    "label": "6:40 AM",
    "value": "06:40",
  },
  {
    "label": "6:50 AM",
    "value": "06:50",
  },
  {
    "label": "7:00 AM",
    "value": "07:00",
  },
  {
    "label": "7:10 AM",
    "value": "07:10",
  },
  {
    "label": "7:20 AM",
    "value": "07:20",
  },
  {
    "label": "7:30 AM",
    "value": "07:30",
  },
  {
    "label": "7:40 AM",
    "value": "07:40",
  },
  {
    "label": "7:50 AM",
    "value": "07:50",
  },
  {
    "label": "8:00 AM",
    "value": "08:00",
  },
  {
    "label": "8:10 AM",
    "value": "08:10",
  },
  {
    "label": "8:20 AM",
    "value": "08:20",
  },
  {
    "label": "8:30 AM",
    "value": "08:30",
  },
  {
    "label": "8:40 AM",
    "value": "08:40",
  },
  {
    "label": "8:50 AM",
    "value": "08:50",
  },
  {
    "label": "9:00 AM",
    "value": "09:00",
  },
  {
    "label": "9:10 AM",
    "value": "09:10",
  },
  {
    "label": "9:20 AM",
    "value": "09:20",
  },
  {
    "label": "9:30 AM",
    "value": "09:30",
  },
  {
    "label": "9:40 AM",
    "value": "09:40",
  },
  {
    "label": "9:50 AM",
    "value": "09:50",
  },
  {
    "label": "10:00 AM",
    "value": "10:00",
  },
  {
    "label": "10:10 AM",
    "value": "10:10",
  },
  {
    "label": "10:20 AM",
    "value": "10:20",
  },
  {
    "label": "10:30 AM",
    "value": "10:30",
  },
  {
    "label": "10:40 AM",
    "value": "10:40",
  },
  {
    "label": "10:50 AM",
    "value": "10:50",
  },
  {
    "label": "11:00 AM",
    "value": "11:00",
  },
  {
    "label": "11:10 AM",
    "value": "11:10",
  },
  {
    "label": "11:20 AM",
    "value": "11:20",
  },
  {
    "label": "11:30 AM",
    "value": "11:30",
  },
  {
    "label": "11:40 AM",
    "value": "11:40",
  },
  {
    "label": "11:50 AM",
    "value": "11:50",
  },
  {
    "label": "12:00 PM",
    "value": "12:00",
  },
  {
    "label": "12:10 PM",
    "value": "12:10",
  },
  {
    "label": "12:20 PM",
    "value": "12:20",
  },
  {
    "label": "12:30 PM",
    "value": "12:30",
  },
  {
    "label": "12:40 PM",
    "value": "12:40",
  },
  {
    "label": "12:50 PM",
    "value": "12:50",
  },
  {
    "label": "1:00 PM",
    "value": "13:00",
  },
  {
    "label": "1:10 PM",
    "value": "13:10",
  },
  {
    "label": "1:20 PM",
    "value": "13:20",
  },
  {
    "label": "1:30 PM",
    "value": "13:30",
  },
  {
    "label": "1:40 PM",
    "value": "13:40",
  },
  {
    "label": "1:50 PM",
    "value": "13:50",
  },
  {
    "label": "2:00 PM",
    "value": "14:00",
  },
  {
    "label": "2:10 PM",
    "value": "14:10",
  },
  {
    "label": "2:20 PM",
    "value": "14:20",
  },
  {
    "label": "2:30 PM",
    "value": "14:30",
  },
  {
    "label": "2:40 PM",
    "value": "14:40",
  },
  {
    "label": "2:50 PM",
    "value": "14:50",
  },
  {
    "label": "3:00 PM",
    "value": "15:00",
  },
  {
    "label": "3:10 PM",
    "value": "15:10",
  },
  {
    "label": "3:20 PM",
    "value": "15:20",
  },
  {
    "label": "3:30 PM",
    "value": "15:30",
  },
  {
    "label": "3:40 PM",
    "value": "15:40",
  },
  {
    "label": "3:50 PM",
    "value": "15:50",
  },
  {
    "label": "4:00 PM",
    "value": "16:00",
  },
  {
    "label": "4:10 PM",
    "value": "16:10",
  },
  {
    "label": "4:20 PM",
    "value": "16:20",
  },
  {
    "label": "4:30 PM",
    "value": "16:30",
  },
  {
    "label": "4:40 PM",
    "value": "16:40",
  },
  {
    "label": "4:50 PM",
    "value": "16:50",
  },
  {
    "label": "5:00 PM",
    "value": "17:00",
  },
  {
    "label": "5:10 PM",
    "value": "17:10",
  },
  {
    "label": "5:20 PM",
    "value": "17:20",
  },
  {
    "label": "5:30 PM",
    "value": "17:30",
  },
  {
    "label": "5:40 PM",
    "value": "17:40",
  },
  {
    "label": "5:50 PM",
    "value": "17:50",
  },
  {
    "label": "6:00 PM",
    "value": "18:00",
  },
  {
    "label": "6:10 PM",
    "value": "18:10",
  },
  {
    "label": "6:20 PM",
    "value": "18:20",
  },
  {
    "label": "6:30 PM",
    "value": "18:30",
  },
  {
    "label": "6:40 PM",
    "value": "18:40",
  },
  {
    "label": "6:50 PM",
    "value": "18:50",
  },
  {
    "label": "7:00 PM",
    "value": "19:00",
  },
]
`;

exports[`gets time options returns an array of options within min 1`] = `
[
  {
    "label": "9:00 AM",
    "value": "09:00",
  },
  {
    "label": "9:10 AM",
    "value": "09:10",
  },
  {
    "label": "9:20 AM",
    "value": "09:20",
  },
  {
    "label": "9:30 AM",
    "value": "09:30",
  },
  {
    "label": "9:40 AM",
    "value": "09:40",
  },
  {
    "label": "9:50 AM",
    "value": "09:50",
  },
  {
    "label": "10:00 AM",
    "value": "10:00",
  },
  {
    "label": "10:10 AM",
    "value": "10:10",
  },
  {
    "label": "10:20 AM",
    "value": "10:20",
  },
  {
    "label": "10:30 AM",
    "value": "10:30",
  },
  {
    "label": "10:40 AM",
    "value": "10:40",
  },
  {
    "label": "10:50 AM",
    "value": "10:50",
  },
  {
    "label": "11:00 AM",
    "value": "11:00",
  },
  {
    "label": "11:10 AM",
    "value": "11:10",
  },
  {
    "label": "11:20 AM",
    "value": "11:20",
  },
  {
    "label": "11:30 AM",
    "value": "11:30",
  },
  {
    "label": "11:40 AM",
    "value": "11:40",
  },
  {
    "label": "11:50 AM",
    "value": "11:50",
  },
  {
    "label": "12:00 PM",
    "value": "12:00",
  },
  {
    "label": "12:10 PM",
    "value": "12:10",
  },
  {
    "label": "12:20 PM",
    "value": "12:20",
  },
  {
    "label": "12:30 PM",
    "value": "12:30",
  },
  {
    "label": "12:40 PM",
    "value": "12:40",
  },
  {
    "label": "12:50 PM",
    "value": "12:50",
  },
  {
    "label": "1:00 PM",
    "value": "13:00",
  },
  {
    "label": "1:10 PM",
    "value": "13:10",
  },
  {
    "label": "1:20 PM",
    "value": "13:20",
  },
  {
    "label": "1:30 PM",
    "value": "13:30",
  },
  {
    "label": "1:40 PM",
    "value": "13:40",
  },
  {
    "label": "1:50 PM",
    "value": "13:50",
  },
  {
    "label": "2:00 PM",
    "value": "14:00",
  },
  {
    "label": "2:10 PM",
    "value": "14:10",
  },
  {
    "label": "2:20 PM",
    "value": "14:20",
  },
  {
    "label": "2:30 PM",
    "value": "14:30",
  },
  {
    "label": "2:40 PM",
    "value": "14:40",
  },
  {
    "label": "2:50 PM",
    "value": "14:50",
  },
  {
    "label": "3:00 PM",
    "value": "15:00",
  },
  {
    "label": "3:10 PM",
    "value": "15:10",
  },
  {
    "label": "3:20 PM",
    "value": "15:20",
  },
  {
    "label": "3:30 PM",
    "value": "15:30",
  },
  {
    "label": "3:40 PM",
    "value": "15:40",
  },
  {
    "label": "3:50 PM",
    "value": "15:50",
  },
  {
    "label": "4:00 PM",
    "value": "16:00",
  },
  {
    "label": "4:10 PM",
    "value": "16:10",
  },
  {
    "label": "4:20 PM",
    "value": "16:20",
  },
  {
    "label": "4:30 PM",
    "value": "16:30",
  },
  {
    "label": "4:40 PM",
    "value": "16:40",
  },
  {
    "label": "4:50 PM",
    "value": "16:50",
  },
  {
    "label": "5:00 PM",
    "value": "17:00",
  },
  {
    "label": "5:10 PM",
    "value": "17:10",
  },
  {
    "label": "5:20 PM",
    "value": "17:20",
  },
  {
    "label": "5:30 PM",
    "value": "17:30",
  },
  {
    "label": "5:40 PM",
    "value": "17:40",
  },
  {
    "label": "5:50 PM",
    "value": "17:50",
  },
  {
    "label": "6:00 PM",
    "value": "18:00",
  },
  {
    "label": "6:10 PM",
    "value": "18:10",
  },
  {
    "label": "6:20 PM",
    "value": "18:20",
  },
  {
    "label": "6:30 PM",
    "value": "18:30",
  },
  {
    "label": "6:40 PM",
    "value": "18:40",
  },
  {
    "label": "6:50 PM",
    "value": "18:50",
  },
  {
    "label": "7:00 PM",
    "value": "19:00",
  },
  {
    "label": "7:10 PM",
    "value": "19:10",
  },
  {
    "label": "7:20 PM",
    "value": "19:20",
  },
  {
    "label": "7:30 PM",
    "value": "19:30",
  },
  {
    "label": "7:40 PM",
    "value": "19:40",
  },
  {
    "label": "7:50 PM",
    "value": "19:50",
  },
  {
    "label": "8:00 PM",
    "value": "20:00",
  },
  {
    "label": "8:10 PM",
    "value": "20:10",
  },
  {
    "label": "8:20 PM",
    "value": "20:20",
  },
  {
    "label": "8:30 PM",
    "value": "20:30",
  },
  {
    "label": "8:40 PM",
    "value": "20:40",
  },
  {
    "label": "8:50 PM",
    "value": "20:50",
  },
  {
    "label": "9:00 PM",
    "value": "21:00",
  },
  {
    "label": "9:10 PM",
    "value": "21:10",
  },
  {
    "label": "9:20 PM",
    "value": "21:20",
  },
  {
    "label": "9:30 PM",
    "value": "21:30",
  },
  {
    "label": "9:40 PM",
    "value": "21:40",
  },
  {
    "label": "9:50 PM",
    "value": "21:50",
  },
  {
    "label": "10:00 PM",
    "value": "22:00",
  },
  {
    "label": "10:10 PM",
    "value": "22:10",
  },
  {
    "label": "10:20 PM",
    "value": "22:20",
  },
  {
    "label": "10:30 PM",
    "value": "22:30",
  },
  {
    "label": "10:40 PM",
    "value": "22:40",
  },
  {
    "label": "10:50 PM",
    "value": "22:50",
  },
  {
    "label": "11:00 PM",
    "value": "23:00",
  },
  {
    "label": "11:10 PM",
    "value": "23:10",
  },
  {
    "label": "11:20 PM",
    "value": "23:20",
  },
  {
    "label": "11:30 PM",
    "value": "23:30",
  },
  {
    "label": "11:40 PM",
    "value": "23:40",
  },
  {
    "label": "11:50 PM",
    "value": "23:50",
  },
]
`;

exports[`gets time options returns an array of options within min and max 1`] = `
[
  {
    "label": "8:00 AM",
    "value": "08:00",
  },
  {
    "label": "8:10 AM",
    "value": "08:10",
  },
  {
    "label": "8:20 AM",
    "value": "08:20",
  },
  {
    "label": "8:30 AM",
    "value": "08:30",
  },
  {
    "label": "8:40 AM",
    "value": "08:40",
  },
  {
    "label": "8:50 AM",
    "value": "08:50",
  },
  {
    "label": "9:00 AM",
    "value": "09:00",
  },
  {
    "label": "9:10 AM",
    "value": "09:10",
  },
  {
    "label": "9:20 AM",
    "value": "09:20",
  },
  {
    "label": "9:30 AM",
    "value": "09:30",
  },
  {
    "label": "9:40 AM",
    "value": "09:40",
  },
  {
    "label": "9:50 AM",
    "value": "09:50",
  },
  {
    "label": "10:00 AM",
    "value": "10:00",
  },
  {
    "label": "10:10 AM",
    "value": "10:10",
  },
  {
    "label": "10:20 AM",
    "value": "10:20",
  },
  {
    "label": "10:30 AM",
    "value": "10:30",
  },
  {
    "label": "10:40 AM",
    "value": "10:40",
  },
  {
    "label": "10:50 AM",
    "value": "10:50",
  },
  {
    "label": "11:00 AM",
    "value": "11:00",
  },
  {
    "label": "11:10 AM",
    "value": "11:10",
  },
  {
    "label": "11:20 AM",
    "value": "11:20",
  },
  {
    "label": "11:30 AM",
    "value": "11:30",
  },
  {
    "label": "11:40 AM",
    "value": "11:40",
  },
  {
    "label": "11:50 AM",
    "value": "11:50",
  },
  {
    "label": "12:00 PM",
    "value": "12:00",
  },
  {
    "label": "12:10 PM",
    "value": "12:10",
  },
  {
    "label": "12:20 PM",
    "value": "12:20",
  },
  {
    "label": "12:30 PM",
    "value": "12:30",
  },
  {
    "label": "12:40 PM",
    "value": "12:40",
  },
  {
    "label": "12:50 PM",
    "value": "12:50",
  },
  {
    "label": "1:00 PM",
    "value": "13:00",
  },
  {
    "label": "1:10 PM",
    "value": "13:10",
  },
  {
    "label": "1:20 PM",
    "value": "13:20",
  },
  {
    "label": "1:30 PM",
    "value": "13:30",
  },
  {
    "label": "1:40 PM",
    "value": "13:40",
  },
  {
    "label": "1:50 PM",
    "value": "13:50",
  },
  {
    "label": "2:00 PM",
    "value": "14:00",
  },
  {
    "label": "2:10 PM",
    "value": "14:10",
  },
  {
    "label": "2:20 PM",
    "value": "14:20",
  },
  {
    "label": "2:30 PM",
    "value": "14:30",
  },
  {
    "label": "2:40 PM",
    "value": "14:40",
  },
  {
    "label": "2:50 PM",
    "value": "14:50",
  },
  {
    "label": "3:00 PM",
    "value": "15:00",
  },
  {
    "label": "3:10 PM",
    "value": "15:10",
  },
  {
    "label": "3:20 PM",
    "value": "15:20",
  },
  {
    "label": "3:30 PM",
    "value": "15:30",
  },
  {
    "label": "3:40 PM",
    "value": "15:40",
  },
  {
    "label": "3:50 PM",
    "value": "15:50",
  },
  {
    "label": "4:00 PM",
    "value": "16:00",
  },
  {
    "label": "4:10 PM",
    "value": "16:10",
  },
  {
    "label": "4:20 PM",
    "value": "16:20",
  },
  {
    "label": "4:30 PM",
    "value": "16:30",
  },
  {
    "label": "4:40 PM",
    "value": "16:40",
  },
  {
    "label": "4:50 PM",
    "value": "16:50",
  },
  {
    "label": "5:00 PM",
    "value": "17:00",
  },
  {
    "label": "5:10 PM",
    "value": "17:10",
  },
  {
    "label": "5:20 PM",
    "value": "17:20",
  },
  {
    "label": "5:30 PM",
    "value": "17:30",
  },
  {
    "label": "5:40 PM",
    "value": "17:40",
  },
  {
    "label": "5:50 PM",
    "value": "17:50",
  },
  {
    "label": "6:00 PM",
    "value": "18:00",
  },
  {
    "label": "6:10 PM",
    "value": "18:10",
  },
  {
    "label": "6:20 PM",
    "value": "18:20",
  },
  {
    "label": "6:30 PM",
    "value": "18:30",
  },
  {
    "label": "6:40 PM",
    "value": "18:40",
  },
  {
    "label": "6:50 PM",
    "value": "18:50",
  },
  {
    "label": "7:00 PM",
    "value": "19:00",
  },
  {
    "label": "7:10 PM",
    "value": "19:10",
  },
  {
    "label": "7:20 PM",
    "value": "19:20",
  },
  {
    "label": "7:30 PM",
    "value": "19:30",
  },
  {
    "label": "7:40 PM",
    "value": "19:40",
  },
  {
    "label": "7:50 PM",
    "value": "19:50",
  },
  {
    "label": "8:00 PM",
    "value": "20:00",
  },
  {
    "label": "8:10 PM",
    "value": "20:10",
  },
  {
    "label": "8:20 PM",
    "value": "20:20",
  },
  {
    "label": "8:30 PM",
    "value": "20:30",
  },
]
`;
